<resources>
    <string name="app_name">cs446-group8</string>
    <string name="app_title">Crop Companion</string>
    <string name="month_label">Month</string>
    <string name="head_count_label"># of People</string>
    <string name="beds_required_label">Beds Required</string>
    <string name="my_crops_label">My Crops</string>
    <string name="add_crop_label">Add New Crop</string>
    <string name="crop_search_hint">Crop</string>
    <string name="add_people_label">People</string>
    <string name="projects_nav_label">Projects</string>
    <string name="settings_nav_label">Settings</string>
    <string name="crop_summary_label">Summary</string>
    <string name="crop_summary_crop_name">Crop: %1$s</string>
    <string name="crop_summary_people_fed"># People Feeding: %1$s</string>
    <string name="crop_summary_beds_needed"># Beds Needed: %1$s</string>
    <string name="crop_summary_seeds_needed"># Seeds Needed: %1$s</string>
    <string name="crop_summary_start_date">Start Date: %1$s</string>
    <string name="crop_summary_growth_time">Estimated Growth Time: %1$s</string>
    <string name="crop_summary_harvest_date">Estimated Harvesting Date: %1$s</string>
    <string name="project_settings_label">Project Settings</string>
    <string name="project_name_label">Project Name</string>
    <string name="project_start_date_label">Start Date</string>
    <string name="calories_per_day_per_person_label">Calories per day per person</string>
    <string name="calories_leafy_greens_label">Calories from leafy greens(%)</string>
    <string name="calories_colourful_veg_label">Calories from colourful vegetables (%)</string>
    <string name="calories_starches_label">Calories from starches (%)</string>
    <string name="project_start_date">Start Date: %1$s</string>
    <string name="planting_schedule_label">Planting Schedule</string>
    <string name="schedule_selected_week">Selected Week: %1$s</string>
    <string name="amount_beds_to_plant"># of beds to plant</string>
    <string name="headcount_button_tooltip">Modify monthly headcounts</string>
    <string name="create_new_project">Create New Project</string>
    <string name="save_tooltip">Save</string>
    <string name="first_harvest_at_label">First Harvest at</string>
    <string name="empty_field_error">Field required!</string>
    <string name="field_percent_error">Must be between 0 and 100</string>
</resources>
