<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="presenter"
            type="com.example.cs446_group8.ui.projects.project_settings.ProjectSettingsContract.Presenter" />

        <variable
            name="projectName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.projects.project_settings.ProjectSettingsActivity">

        <TextView
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/project_settings_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:backgroundTint="@android:color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_divider"/>

        <ImageView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="352dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:src="@drawable/ic_save"
            android:onClick="@{()->presenter.saveButtonClicked()}"
            app:layout_constraintBottom_toTopOf="@id/title_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/title_divider"
            style="@style/divider"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/title_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_section"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_name_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@{projectName}"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calories_section"
                android:layout_width="match_parent"
                android:layout_height="358dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/name_field">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_per_day_per_person_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/calories_per_day_per_person_field"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/calories_leafy_greens_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/calories_leafy_greens_field"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/calories_colourful_veg_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/calories_colourful_veg_field"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/calories_starches_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/calories_starches_field"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>